{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 59,
  "lineage": "698cca1e-a7f3-65f9-2eea-589081e9e7b2",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-engress-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-engress-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ingress-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ingress-dev2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ingress-mngt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-15T15:13:12.353-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-343007/global/firewalls/allow-ingress-mngt",
            "log_config": [],
            "name": "allow-ingress-mngt",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-343007/global/networks/mngt-vpc",
            "priority": 1000,
            "project": "devops-343007",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-343007/global/firewalls/allow-ingress-mngt",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.mngt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ingress-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ingress-prod2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ingress-prod3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.149.196.98",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-03-15T15:13:12.465-07:00",
            "id": "projects/devops-343007/global/addresses/loadbalance-static-ip",
            "name": "loadbalance-static-ip",
            "prefix_length": 0,
            "project": "devops-343007",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-343007/global/addresses/loadbalance-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.102.154.144",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-03-14T16:55:31.243-07:00",
            "id": "projects/devops-343007/global/addresses/lb-static-ip2",
            "name": "lb-static-ip2",
            "prefix_length": 0,
            "project": "devops-343007",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-343007/global/addresses/lb-static-ip2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dev-sqlserver-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dev-sqlserver-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dev-webserver-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dev-webserver-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mngt-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220308",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devops-343007/zones/europe-west3-a/disks/mngt-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devops-343007/zones/europe-west3-a/instances/mngt-vm",
            "instance_id": "4896795425398146105",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "E0y-e4_MRps=",
            "metadata_startup_script": "sudo apt install apache2 -y",
            "name": "mngt-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-343007/global/networks/mngt-vpc",
                "network_ip": "172.16.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-343007/regions/europe-west3/subnetworks/mngt-subnet",
                "subnetwork_project": "devops-343007"
              }
            ],
            "project": "devops-343007",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-343007/zones/europe-west3-a/instances/mngt-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "google_compute_network.mngt-vpc",
            "google_compute_subnetwork.mngt-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "prod-sqlserver-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "prod-sqlserver-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "prod-webserver-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "prod-webserver-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "mngt-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/devops-343007/global/networks/mngt-vpc",
            "mtu": 0,
            "name": "mngt-vpc",
            "project": "devops-343007",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-343007/global/networks/mngt-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "dev-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "dev-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mngt-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-15T13:44:47.548-07:00",
            "gateway_address": "172.16.0.1",
            "id": "projects/devops-343007/regions/europe-west3/subnetworks/mngt-subnet",
            "ip_cidr_range": "172.16.0.0/24",
            "name": "mngt-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-343007/global/networks/mngt-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "devops-343007",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-343007/regions/europe-west3/subnetworks/mngt-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.mngt-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}